# lingot

./: CMakeLists.txt  config.h
src/: CMakeLists.txt  lingot-gui-mainframe.c
